<resources>
    <string name="app_name">星耀悦读</string>
    <string name="action_settings">Settings</string>
    <string name="tab_guider">指导</string>
    <string name="tab_library">图书</string>
    <string name="tab_user">我</string>


    <string name="networkerror">网络连接失败，请检查您的网络</string>
    <string name="login_forgetpwd">忘记密码</string>
    <string name="login_login">登 录</string>
    <string name="login_register">初来报到？注册戳这里</string>

    <string name="input_phone_tip">请输入手机号码</string>
    <string name="input_phone_error_tip">您输入手机号格式有误</string>
    <string name="input_pwd_tip">请输入密码</string>
    <string name="input_code_tip">请输入验证码</string>
    <string name="input_pwd_error_tip">密码字数不小于6位</string>
    <string name="input_pwd_tip_show">*密码字数不小于6位</string>
    <string name="phone_hint">手机号码</string>
    <string name="code_hint">验证码</string>
    <string name="pwd_hint">密码</string>
    <string name="register">注册</string>
    <string name="user_protocol">注册即表示已同意《星耀用户协议》</string>
    <string name="get_code">获取验证码</string>
    <string name="code_get_fail">获取验证码失败，请稍后重试！</string>
    <string name="kind_info">孩子信息</string>
    <string name="code_get_fail_from_code">获取验证码失败，请重新扫描璀璨卡</string>

    <string name="operate_success">操作成功！</string>
    <string name="operate_fail">操作失败！</string>

    <string name="kind_school">学校</string>
    <string name="kind_class">班级</string>
    <string name="kind_kind">孩子</string>
    <string name="sex">性别</string>
    <string name="kind_boy">男</string>
    <string name="kind_girl">女</string>
    <string name="kind_select_input">选填部分</string>
    <string name="kind_relation">关系</string>
    <string name="kind_birthday">生日</string>
    <string name="kind_height">身高</string>
    <string name="kind_weight">体重</string>
    <string name="kind_commit">提交</string>

    <string name="activate_card">激活璀璨卡</string>
    <string name="skip">跳过</string>
    <string name="loading_txt">正在加载...</string>
    <string name="load_tag_null">抱歉，获取失败了</string>
    <string name="capture_error_tip">获取不到摄像头数据，请检查是否已经打开摄像头权限</string>
    <string name="activate_audit_tip">成功激活璀璨卡\n等待教师认证</string>
    <string name="input_level_not_null">请选择年级</string>
    <string name="input_class_not_null">请选择班级</string>
    <string name="input_name_not_null">请输入孩子姓名</string>
    <string name="input_sex_not_null">孩子性别不能为空</string>
    <string name="task_title_need">作业要求</string>
    <string name="task_title_need1">1.在规定的图书中选择一本进行阅读；</string>
    <string name="task_title_need2">2.阅读图书写一篇不小于500字的读后感；</string>
    <string name="task_title_need3">3.注意基本观点明确，围绕基本观点摆事实讲道理。</string>
    <string name="task_start_time_title">开始时间：</string>
    <string name="task_end_time_title">结束时间：</string>
    <string name="task_library_title">图书范围</string>
    <string name="task_library_more">更多图书></string>
    <string name="task_recommend">专家推荐</string>
    <string name="commit_task">提交作业</string>
    <string name="recomand_me_title">我感兴趣的</string>
    <string name="edit">编辑</string>
    <string name="sort_subject">学科</string>
    <string name="sort_level">年级</string>
    <string name="recomand">推荐</string>
    <string name="sort">分类</string>
    <string name="score">积分</string>
    <string name="rule">规则</string>
    <string name="sure">确定</string>
    <string name="recomand_interest_select">选择兴趣</string>
    <string name="book_recommend">专家推荐：</string>
    <string name="location_book">馆藏位置：</string>
    <string name="collect">收藏</string>
    <string name="ordering">预约</string>
    <string name="ordering_cancel">取消预约</string>
    <string name="strategy"> 攻略 </string>
    <string name="book_report">读后感</string>
    <string name="recomand_like">猜你喜欢</string>
    <string name="praise">点赞</string>
    <string name="comment">评论</string>
    <string name="short_comment">图书简介</string>
    <string name="order">在借</string>
    <string name="ordered">已还</string>
    <string name="order_start_time">借书时间：</string>
    <string name="order_end_time">还书时间：</string>
    <string name="record_books">借书记录</string>
    <string name="record_study">学习记录</string>
    <string name="kind_infos">孩子信息</string>
    <string name="userinfo_update">个人信息修改</string>

    <string name="head_title">头像</string>
    <string name="nick_name">昵称</string>
    <string name="setting">设置</string>


    <string name="comment_back">评论回复</string>
    <string name="msg">消息</string>

    <string name="record_title">借书</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <string name="help_center">帮助中心</string>
    <string name="contact">在线客服</string>
    <string name="proctocol">星耀平台协议</string>
    <string name="current_version">当前版本</string>
    <string name="update_pwd">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="mark_default_kind">设为默认孩子</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="jianjie">简介</string>
    <string name="my_collect">我的收藏</string>
    <string name="msg_center">消息中心</string>
    <string name="prof_recommand_title">专家推荐</string>
    <string name="select_tag_out_index_tip">选择的兴趣标签不能超过6个</string>
    <string name="input_search_content_tip">请输入搜索的内容</string>

    <string name="search_title_content">搜索结果</string>
    <string name="father">爸爸</string>
    <string name="search_null">没有搜索的数据</string>
    <string name="version_get_exception">获取异常</string>
    <string name="update_pwd_setting">修改密码</string>
    <string name="back_app_tip">再按一次退出应用</string>
    <string name="comment_test">评测</string>
    <string name="task_lend_book_title">借过的书</string>
    <string name="task_read_days">阅读天数</string>
    <string name="task_complete">完成度</string>
    <string name="read_plan">阅读计划</string>
    <string name="task_sign_in">签到</string>
    <string name="play_task">做作业</string>
    <string name="send">发送</string>
    <string name="comment_tip_parents">爸比妈咪说两句</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="commit_agin_task">重新提交作业</string>
    <string name="share_read_feel">分享到读书读后感</string>
    <string name="get_classlist_fail">没有获取到班级列表！</string>



    <string name="nothing_data_to_get">没有可获取的数据了！</string>
    <string name="nothing_class_tip">该年级没有班级！</string>
</resources>
