<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/userinfo_main"
    android:layout_height="match_parent">

    <com.fancyfamily.primarylibrary.commentlibrary.widget.TitleBar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:padding="26px"
        android:background="@color/white"
        app:title_left_icon_src="@drawable/img_register_back"
        app:title_text="@string/setting"
        app:title_text_color="@color/login_bg"
        app:title_right_text=""
        app:title_right_visible="true"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc1"
        android:layout_below="@id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:divider="@drawable/line"
        app:showDividers="beginning|middle|end"
        >
        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/kind_txt_title"
            android:text="@string/help_center"
            android:padding="16dp"
            android:background="@color/white"
            android:drawableRight="@drawable/img_userinfo_jump"
            />
        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/kind_txt_title"
            android:text="@string/contact"
            android:padding="16dp"
            android:background="@color/white"
            android:drawableRight="@drawable/img_userinfo_jump"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llc2"
        android:layout_below="@id/llc1"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:divider="@drawable/line"
        app:showDividers="beginning|middle|end"
        >
        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/kind_txt_title"
            android:text="@string/proctocol"
            android:padding="16dp"
            android:background="@color/white"
            android:drawableRight="@drawable/img_userinfo_jump"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            >
            <TextView
                android:id="@+id/tv_current_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/kind_txt_title"
                android:text="@string/current_version"
                />
            <TextView
                android:id="@+id/tv_current_version_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/kind_txt_title"
                android:text="V1.0"
                android:background="@color/white"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_update_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/kind_txt_title"
            android:text="@string/update_pwd"
            android:padding="16dp"
            android:background="@color/white"
            android:drawableRight="@drawable/img_userinfo_jump"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_exit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forgetpwd"
        android:text="@string/exit_login"
        android:textSize="36px"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_circle_selector"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="164px"
        android:layout_marginRight="164px"
        android:layout_marginBottom="62px"
        />
</RelativeLayout>