<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/common_title_background">

    <com.fancyfamily.primarylibrary.commentlibrary.widget.TitleBar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        app:title_text="@string/kind_info"
        app:title_text_color="@color/login_bg"
        app:title_right_visible="true"
        app:title_left_visible="false"
        app:title_left_icon_visible="false"
        app:title_right_text="@string/skip"
        app:title_right_text_color="@color/gray_text"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb"
        android:paddingLeft="@dimen/padding_content"
        android:paddingRight="@dimen/padding_content"
        android:paddingTop="@dimen/padding_content"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_header"
            android:layout_width="138px"
            android:layout_height="138px"
            android:src="@drawable/defaul_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_content"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/iv_header"
            android:scrollbars="none"
            >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_school"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="学校"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <TextView
                    android:id="@+id/tv_school_value"
                    android:layout_below="@id/iv_header"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_input"
                    android:text="星耀小学"
                    android:layout_weight="4"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_class"
                    android:layout_below="@id/tv_school"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_class"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="4"
                    >
                    <TextView
                        android:id="@+id/tv_level"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/et_txt_title"
                        android:hint="年级"
                        android:layout_marginRight="20px"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/tv_class_value"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="班级"
                        style="@style/et_txt_title"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_kind"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_kind"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <EditText
                    android:id="@+id/et_name"
                    android:layout_weight="4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:hint="姓名"
                    style="@style/et_txt_title"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/rb_boy"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@drawable/rb_btn_sex_selector"
                        android:padding="12px"
                        android:checked="true"
                        android:layout_marginRight="20px"
                        android:button="@null"
                        android:drawableLeft="@drawable/check_boy_selector"
                        android:text="@string/kind_boy"
                        android:gravity="center"
                        android:background="@drawable/check_selector"
                        />
                    <RadioButton
                        android:id="@+id/rb_girl"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@drawable/rb_btn_sex_selector"
                        android:padding="12px"
                        android:gravity="center"
                        android:drawableLeft="@drawable/check_girl_selector"
                        android:button="@null"
                        android:background="@drawable/check_selector"
                        android:text="@string/kind_girl"
                        />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_select_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                android:text="@string/kind_select_input"
                style="@style/kind_txt_title"
                android:gravity="center"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_relation"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_relation"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <TextView
                    android:id="@+id/tv_relation_value"
                    android:layout_weight="4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/father"
                    style="@style/et_txt_title"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_birthday"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <TextView
                    android:id="@+id/tv_birthday_value"
                    android:layout_weight="4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    style="@style/et_txt_title"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_height"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <EditText
                    android:id="@+id/et_height"
                    android:layout_weight="4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/et_txt_title"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_input"
                >
                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/kind_weight"
                    android:layout_weight="1"
                    style="@style/kind_txt_title"
                    />
                <EditText
                    android:id="@+id/et_weight"
                    android:layout_weight="4"
                    android:layout_width="0px"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    style="@style/et_txt_title"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="120px"
                android:layout_marginBottom="@dimen/padding_content"
                android:text="@string/kind_commit"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_commit_circle_selector"
                style="@style/btn_common_nomargin"
                />
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
