<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_content_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <com.fancyfamily.primarylibrary.commentlibrary.widget.TitleBar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:padding="26px"
        app:title_left_icon_src="@drawable/img_register_back"
        app:title_right_text=""
        app:title_right_visible="true"
        app:title_text="@string/userinfo_update" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15px"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:layout_marginTop="30px"
        android:background="@drawable/radiu_white_bg"
        android:orientation="vertical"
        android:padding="16px"
        app:divider="@drawable/line"
        app:dividerPadding="12dp"
        app:showDividers="middle|end">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <TextView
                style="@style/kind_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/head_title" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_header"
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_alignParentRight="true"
                android:layout_margin="16px"
                android:src="@drawable/defaul_head" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                style="@style/kind_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/nick_name" />

            <EditText
                android:id="@+id/et_nick_name"
                style="@style/et_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="小星妈妈"
                android:textColor="@color/gray_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                style="@style/kind_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/tv_sex"
                style="@style/et_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="number"
                android:text="女"
                android:textColor="@color/gray_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                style="@style/kind_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/kind_birthday" />

            <TextView
                android:id="@+id/tv_birthday"
                style="@style/et_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/gray_text" />
        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>