<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.fancyfamily.primarylibrary.commentlibrary.widget.TitleBar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            android:padding="26px"
            app:title_left_icon_src="@drawable/img_register_back"
            app:title_right_text=""
            app:title_right_visible="true"
            app:title_text="@string/commit_task"
            app:title_text_color="@color/bule_1" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="70px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8px"
            android:background="@drawable/btn_blue_circle"
            android:paddingLeft="8px"
            android:paddingRight="8px"
            android:text="@string/send"
            android:textColor="@color/white" />
    </RelativeLayout>

    <include
        layout="@layout/line"/>

    <include
        layout="@layout/lv_item_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:layout_marginTop="32px" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="26px"
            android:layout_marginRight="26px"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="250px"
                android:layout_marginTop="32px"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/comment_tip_parents"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/gray_text" />


            <com.fancyfamily.primarylibrary.commentlibrary.widget.MeasureGridView
                android:id="@+id/gv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:divider="@null"
                android:dividerHeight="0px"
                android:gravity="center"
                android:headerDividersEnabled="false"
                android:horizontalSpacing="10px"
                android:listSelector="@color/transparent"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="10px" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>